--- a/src/components/User/User.module.css
+++ b/src/components/User/User.module.css
@@ -1,7 +1,7 @@
 .user {
   position: absolute;
   top: 4.2rem;
-  right: 4.2rem;
+  right: 4rem;
   background-color: var(--color-dark--1);
   padding: 1rem 1.4rem;
   border-radius: 7px;
@@ -9,7 +9,6 @@
   box-shadow: 0 0.8rem 2.4rem rgba(36, 42, 46, 0.5);
   font-size: 1.6rem;
   font-weight: 600;
-
   display: flex;
   align-items: center;
   gap: 1.6rem;
@@ -18,6 +17,11 @@
 .user img {
   border-radius: 100px;
   height: 4rem;
+}
+
+.user h1 {
+  font-size: 1.6rem;
+  font-weight: 600;
 }
 
 .user button {
@@ -31,4 +35,14 @@
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
+}
+
+@media screen and (max-width: 425px) {
+  .user h1 {
+    display: none;
+  }
+
+  .user img {
+    display: none;
+  }
 }
