--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -42,3 +42,14 @@
   font-family: inherit;
   font-size: 1.2rem;
 }
+
+@media screen and (max-width: 768px) {
+  .form {
+    padding: 2.5rem;
+  }
+  .buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+}
