--- a/src/components/CityItem/CityItem.module.css
+++ b/src/components/CityItem/CityItem.module.css
@@ -4,13 +4,11 @@
   display: flex;
   gap: 1.6rem;
   align-items: center;
-
   background-color: var(--color-dark--2);
   border-radius: 7px;
   padding: 1rem 2rem;
   border-left: 5px solid var(--color-brand--2);
   cursor: pointer;
-
   color: inherit;
   text-decoration: none;
 }
@@ -51,4 +49,16 @@
 .deleteBtn:hover {
   background-color: var(--color-brand--1);
   color: var(--color-dark--1);
+}
+
+@media screen and (max-width: 470px) {
+  .cityItem,
+  .cityItem:link,
+  .cityItem:visited {
+    display: grid;
+    gap: 1px;
+  }
+  .date {
+    font-size: 1rem;
+  }
 }
