--- a/src/components/User/User.module.css
+++ b/src/components/User/User.module.css
@@ -37,7 +37,28 @@
   cursor: pointer;
 }
 
+@media screen and (max-width: 655px) {
+  .user h1 {
+    display: none;
+  }
+}
+@media screen and (max-width: 525px) {
+  .user h1 {
+    display: none;
+  }
+
+  .user img {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 425px) {
+  .user {
+    left: 0.5rem;
+    top: 2rem;
+    width: 12vh;
+    background-color: transparent;
+  }
   .user h1 {
     display: none;
   }
