--- a/src/pages/AppLayout.module.css
+++ b/src/pages/AppLayout.module.css
@@ -6,8 +6,8 @@
   position: relative;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 525px) {
   .app {
-    padding: 0.5rem;
+    flex-direction: column;
   }
 }
