--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -15,6 +15,22 @@
   color: var(--color-dark--1);
 }
 
+.toggleButton {
+  background-color: var(--color-brand--2);
+  color: var(--color-light--2);
+  border: none;
+  border-radius: 0px;
+  cursor: pointer;
+
+  font-size: 2.5rem;
+  transition: transform 0.3s ease;
+  z-index: 1000;
+}
+
+.toggleButton:hover {
+  transform: scaleX(1.1);
+}
+
 .back {
   font-weight: 600;
   background: none;
